fixing home css

--- a/src/components/filterButton/FilterButton.css
+++ b/src/components/filterButton/FilterButton.css
@@ -24,7 +24,7 @@ button:active {
   display: flex;
   justify-content: center;
   margin-bottom: 10vh;
-  margin-top: 2%;
+  margin-top: 3vh;
 }
 
 /* Responsive */
