--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,4 +1,4 @@
-@import "react-slideshow-image/dist/styles.css";
+@import 'react-slideshow-image/dist/styles.css';
 
 .slideContain {
   background: #1fe0;
@@ -23,7 +23,7 @@
 
 @media (min-width: 800px) {
   .popMovieImg {
-    width: 17%;
+    width: 15.7%;
     height: 27%;
     margin-bottom: 13vh;
   }
