--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -1,4 +1,3 @@
-
 body > div {
   font-family: 'Reem Kufi', sans-serif;
 }
@@ -83,7 +82,7 @@ img {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-top: 25vh;
+  margin-top: 5vh;
 }
 
 .actors > div img {
@@ -140,6 +139,7 @@ img {
   -o-transform: scale(1.31);
   transform: scale(1.31);
   border: 1.2mm ridge #facc4d;
+  transition: all 0.1s ease-in-out;
 }
 
 .actors > div span {
