--- a/src/components/watchlist/watchlist.css
+++ b/src/components/watchlist/watchlist.css
@@ -21,6 +21,11 @@
   background-color: rgba(0, 0, 0, 0.178);
 }
 
+.providers img {
+  width: 100px;
+  height: auto;
+}
+
 .watchCard {
   position: relative;
   width: 50vw;
@@ -82,7 +87,7 @@
   height: 80px;
   background: transparent;
   box-shadow: 0 0 0 transparent;
-  border: 0 solid transparent;
+  border: none;
   text-shadow: 0 0 0 transparent;
 }
 
@@ -93,7 +98,7 @@
   text-shadow: 0 0 0 transparent;
 }
 
-.ticketAndRemove:hover {
+.ticket:hover {
   background: transparent;
   box-shadow: 0 0 0 transparent;
   border: 0 solid transparent;
