--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -33,10 +33,22 @@
 }
 
 @media screen and (max-width: 600px) {
+  .member img {
+    margin: 0;
+  }
+
   .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: auto;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+  }
+
+  .title {
+    font-size: 2.5rem;
+    margin-top: 12vh;
   }
 
   .member {
