--- a/src/components/FicheFilm/FicheFilm.css
+++ b/src/components/FicheFilm/FicheFilm.css
@@ -35,47 +35,68 @@ img {
   font-size: 43px;
   display: flex;
   justify-content: space-between;
-  margin-left: 56px;
-  margin-right: 55px;
-  margin-top: 10vh;
+  margin: 4vh 2vw 0 1vw;
   align-items: center;
-}
-
-.genresOverview {
-  font-size: 25px;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 30px;
-  background-color: rgba(255, 255, 240, 0.247);
-  height: 69vh;
-  margin-top: 2%;
-}
-
-.genres {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 7vh;
-}
-
-.genres > p {
-  padding-right: 10px;
 }
 
 .directorTimeDate {
   font-size: 25px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 100%;
-  background-color: rgba(255, 255, 240, 0.247);
+  width: 32%;
   order: -1;
+  margin: 1.5vw;
 }
 
-.directorTimeDate > p {
+.director {
+  background-color: rgba(255, 255, 240, 0.247);
+  border-radius: 10px;
+  height: 25vh;
+  margin-bottom: 6vh;
+  padding: 1vw;
+}
+
+.provIco {
+  height: 5vh;
+  margin: 1vw 0.5vw 0.5vw 0;
+}
+
+.provider {
+  display: flex;
+  flex-direction: column;
+  height: 20vh;
+  background-color: rgba(255, 255, 240, 0.247);
+  border-radius: 10px;
+  padding: 1vw;
+  margin-bottom: 6.5vh;
+}
+
+.genresOverview {
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  width: 32%;
+  margin: 1vh;
+}
+
+.genres {
+  display: flex;
+  flex-grow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 5vh;
+  background-color: rgba(255, 255, 240, 0.247);
   padding-right: 10px;
-  width: 200px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  height: 7vh;
+  border-radius: 10px;
+}
+
+.overview {
+  height: 35vh;
+  background-color: rgba(255, 255, 240, 0.247);
+  overflow: scroll;
+  border-radius: 10px;
+  padding: 1vw;
 }
 
 .actors {
@@ -157,20 +178,68 @@ img {
   margin-top: 5px;
 }
 
-.provIco {
-  height: 3.5vh;
-  margin: 0.5vw 0.5vw 0.5vw 0;
+.vote {
+  margin-right: 1vh;
 }
 
-.provider {
+.buttons {
   display: flex;
-  flex-direction: column;
-  height: 15vh;
+  flex-direction: row;
+  height: 10vh;
+  justify-content: center;
+  padding: 2vh;
 }
 
-@media screen and (max-width: 1920px) {
-  .poster {
-    margin-right: 5px;
+.buttonAdd {
+  width: 5em;
+  height: 5em;
+  background-color: rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  border-radius: 50px;
+}
+
+.buttonTrailer {
+  margin: 0;
+  margin-left: 30%;
+  width: 2.7em;
+  height: 2.7em;
+  background-color: rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  border-radius: 50px;
+  border: 1px solid white;
+  right: 20%;
+  position: relative;
+}
+
+.playTriangle {
+  position: absolute;
+  margin: 0 auto;
+  top: 15%;
+  right: 22%;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0.9em 0 0.9em 1.2em;
+  border-color: transparent transparent transparent #000;
+  opacity: 0.75;
+}
+
+.buttonTrailer:hover .playTriangle:hover {
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .starScore {
+    width: 120px;
+    height: 22px;
+  }
+
+  .titleVote {
+    display: flex;
+    flex-direction: column;
+    font-size: 35px;
+    margin-top: 10vh;
+    margin-bottom: 0;
   }
 
   .directorTimeDate {
@@ -180,26 +249,38 @@ img {
     align-items: center;
     width: 100%;
     background-color: rgba(255, 255, 240, 0.247);
-    order: -1;
+    margin-bottom: 30%;
+    order: 1;
+    text-align: center;
+    margin-top: 0;
   }
 
-  .overview {
-    font-size: 25px;
-    text-align: left;
-    overflow-y: auto;
-    width: 38vw;
+  .posterTrailer {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .posterTrailer > img {
+    margin-bottom: 25px;
+    width: 59%;
+    height: 59%;
+    box-shadow: 20px 10px 23px -10px rgba(0, 0, 0, 0.384);
+  }
+
+  .backgroundPoster {
+    z-index: -1;
+    display: none;
   }
 
   .buttons {
     display: flex;
     flex-direction: row;
-    position: absolute;
-    bottom: 39%;
-    left: 23%;
+    order: -1;
   }
 
   .buttonAdd {
-    margin: 0;
+    top: 68%;
     margin-left: 30%;
     width: 5em;
     height: 5em;
@@ -207,31 +288,26 @@ img {
     cursor: pointer;
     border-radius: 50px;
     position: absolute;
-    left: 100%;
   }
 
   .buttonTrailer {
-    margin: 0;
-    margin-left: 30%;
-    width: 4em;
-    height: 4em;
-    background-color: rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 68.5%;
+    margin-right: 150px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
-    border-radius: 50px;
-    position: relative;
-    border: 1px solid white;
-    right: 20%;
   }
 
   .playTriangle {
     margin: 0 auto;
-    top: 20%;
-    right: 20%;
+    top: 15%;
+    right: 18%;
     position: absolute;
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 1.2em 0 1.2em 2em;
+    border-width: 0.8em 0 0.8em 1.3em;
     border-color: transparent transparent transparent #000;
     opacity: 0.75;
   }
@@ -240,160 +316,59 @@ img {
     opacity: 1;
   }
 
-  .provIco {
-    height: 5vh;
-    margin: 0.5vw 0.5vw 0.5vw 0;
+  .vote {
+    font-size: 18px;
+  }
+
+  .directorTimeDate > p {
+    padding-right: 10px;
+    padding-bottom: 20px;
+  }
+
+  .genresOverview {
+    display: flex;
+    flex-flow: column wrap;
+    font-size: 25px;
+    overflow-y: auto;
+    width: 95vw;
+    margin: 5vw;
+  }
+
+  .genres {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
+    margin-bottom: 10%;
+  }
+
+  .overview {
+    width: 95vw;
+    font-size: 20px;
+    overflow-y: auto;
+  }
+
+  .director {
+    width: 95vw;
+    height: 15vh;
   }
 
   .provider {
-    display: flex;
-    flex-direction: column;
+    width: 95vw;
     height: 15vh;
-    margin-top: 2.5vh;
   }
 
-  @media screen and (max-width: 768px) {
-    .starScore {
-      width: 120px;
-      height: 22px;
-    }
+  .actors {
+    flex-direction: column;
+    margin-top: 0;
+  }
 
-    .titleVote {
-      display: flex;
-      flex-direction: column;
-      font-size: 35px;
-      margin-top: 10vh;
-      margin-bottom: 0;
-    }
+  .actors > div img {
+    width: 193px;
+    height: 241px;
+  }
 
-    .directorTimeDate {
-      font-size: 25px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      background-color: rgba(255, 255, 240, 0.247);
-      margin-bottom: 30%;
-      order: 1;
-      text-align: center;
-      margin-top: 0;
-    }
-
-    .posterTrailer {
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .posterTrailer > img {
-      margin-bottom: 25px;
-      width: 59%;
-      height: 59%;
-      box-shadow: 20px 10px 23px -10px rgba(0, 0, 0, 0.384);
-    }
-
-    .backgroundPoster {
-      z-index: -1;
-      display: none;
-    }
-
-    .buttons {
-      display: flex;
-      flex-direction: row;
-      top: 21%;
-    }
-
-    .buttonAdd {
-      margin: 0;
-      margin-left: 30%;
-      width: 5em;
-      height: 5em;
-      background-color: rgba(0, 0, 0, 0.25);
-      cursor: pointer;
-      border-radius: 50px;
-      position: absolute;
-      top: 6.5%;
-    }
-
-    .buttonTrailer {
-      width: 60px;
-      height: 60px;
-      cursor: pointer;
-      margin-top: 40px;
-      margin-bottom: 40px;
-      top: 3%;
-    }
-
-    .playTriangle {
-      margin: 0 auto;
-      top: 18%;
-      right: 18%;
-      position: absolute;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 1.3em 0 1.3em 2em;
-      border-color: transparent transparent transparent #000;
-      opacity: 0.75;
-    }
-
-    .buttonTrailer:hover .playTriangle:hover {
-      opacity: 1;
-    }
-
-    .vote {
-      font-size: 18px;
-    }
-
-    .directorTimeDate > p {
-      padding-right: 10px;
-      padding-bottom: 20px;
-    }
-
-    .genresOverview {
-      display: flex;
-      flex-flow: column wrap;
-      font-size: 25px;
-      margin-bottom: 30px;
-      overflow-y: auto;
-      width: 100vw;
-    }
-
-    .genres {
-      display: flex;
-      flex-flow: wrap;
-      justify-content: center;
-      margin-bottom: 30%;
-    }
-
-    .genres > p {
-      padding-right: 25px;
-      padding-top: 10px;
-    }
-
-    .overview {
-      width: 100vw;
-      font-size: 20px;
-      overflow-y: auto;
-    }
-
-    .actors {
-      flex-direction: column;
-      margin-top: 0;
-    }
-
-    .actors > div p {
-      margin-left: 88px;
-      width: 193px;
-    }
-
-    .actors > div img {
-      width: 193px;
-      height: 241px;
-    }
-
-    .actors > div {
-      margin: 2px;
-    }
+  .actors > div p {
+    margin-left: 51px;
+    width: 193px;
   }
 }
