--- a/src/components/watchlist/watchlist.css
+++ b/src/components/watchlist/watchlist.css
@@ -229,7 +229,21 @@
   }
 
   .ticket img {
-    margin-left: 18%;
     height: 60px;
+  }
+
+  .watchBloc button {
+    background: none;
+    box-shadow: none;
+    border: none;
+    text-shadow: none;
+  }
+
+  .providers img {
+    margin: 17px 18px 0 0;
+    border-radius: 50px;
+    width: 60px;
+    height: 60px;
+    margin-left: 33px;
   }
 }
