--- a/src/components/searchBar/Search.css
+++ b/src/components/searchBar/Search.css
@@ -3,7 +3,7 @@
   text-align: center;
   height: 30px;
   width: 45vw;
-  opacity: 70%;
+  opacity: 0.7;
   border-radius: 10px;
   box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
 }
